--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Fairhaven Storage">
-  <meta name="author" content="Fairhaven Storage">
-  <title>Fairhaven Storage</title>
-  <style></style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Fairhaven Storage">
+	<meta name="author" content="Fairhaven Storage">
+	<title>Fairhaven Storage</title>
+	<style></style>
 </head>
 
 <body>
-  <script></script>
+	<h1>Hello World</h1>
+  	<script></script>
 </body>
 </html>
