--- a/index.html
+++ b/index.html
@@ -7,11 +7,47 @@
 	<meta name="description" content="Fairhaven Storage">
 	<meta name="author" content="Fairhaven Storage">
 	<title>Fairhaven Storage</title>
-	<style></style>
+
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  	<link rel="stylesheet" href="css/normalize.css">
+  	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-	<h1>Hello World</h1>
+	<div id="main">
+		<div class="name-container">
+			<div class="logo-letters logo-accent">F</div>
+			<div class="logo-letters logo-white">airhaven</div>
+			<div class="logo-letters logo-accent">S</div>
+			<div class="logo-letters logo-white">torage</div>
+		</div>	
+
+		<section class="content large-60">
+			Fairhave Storage offers outside storage rental space that is ideal for boat and recreational vehicle storage.  Trailers and many other items which do not require indoor housing are also ideal for our location.
+		</section>
+
+		<section class="content right">
+			<ul>
+				<li>No move in fees or hidden charges</li>
+				<li>Convenient for all of Central Oregon residents or vacationers</li>
+				<li>Available 24 / 7</li>
+				<li>Secured and monitored</li>
+			</ul>
+		</section>
+
+		<section class="content big">
+			<div class="price">Only <span class="accent">$2.60</span> per foot per month!</div>
+		</section>
+
+		<section class="content center">
+			<div class="price">Contact <span class="accent">Brad Carrell</span> for more information at <span class="accent"><a href="tel:1-541-480-6415">(541) 480-6415</a></span></div>
+		</section>
+
+		<div id="map-container">
+			<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11426.100181490354!2d-121.192315!3d44.27859!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4028b556873f4e68!2sFairhaven+Storage!5e0!3m2!1sen!2sus!4v1553837990285!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</div>
+	
   	<script></script>
 </body>
 </html>
